remove non-used files

--- a/00_visualisations.ipynb
+++ b/00_visualisations.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
     "    # axs[1].set_title('Accessibility score for seniors', fontsize = 16)\n",
     "\n",
     "plt.tight_layout()\n",
-    "#plt.savefig('./figures/access_score_comparison.png', bbox_inches='tight')"
+    "plt.savefig('./figures/access_score_comparison.png', bbox_inches='tight')"
    ]
   }
  ],
